add entity manager factory

--- a/config/services_dev.yaml
+++ b/config/services_dev.yaml
@@ -20,3 +20,6 @@ services:
   Addworking\Security\Application\AuthorizationChecker:
     class: Addworking\Security\Application\AuthorizationChecker
     autowire: true
+
+  Doctrine\ORM\EntityManagerInterface:
+    synthetic: true
