--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_ENV=dev
-DB_PASSWORD=password
-DB_USERNAME=carere
-DB_DATABASE=security
 DB_PORT=5432
+DB_DATABASE=addworking
+DB_USERNAME=carere
+DB_PASSWORD=password
 DB_HOST=127.0.0.1
