--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_ENV=test
 DB_PORT=5432
-DB_DATABASE=addworking
+DB_DATABASE=security
 DB_USERNAME=carere
 DB_PASSWORD=password
 DB_HOST=127.0.0.1
