--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   "require": {
     "doctrine/orm": "2.*",
     "illuminate/support": "7.*",
-    "illuminate/database": "^7.16"
+    "illuminate/database": "7.*"
   },
   "require-dev": {
     "behat/behat": "3.*",
