add prettier for php + php cs fixer

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-APP_ENV=dev
+APP_ENV=test
 DB_PORT=5432
 DB_DATABASE=security
 DB_USERNAME=carere
 DB_PASSWORD=password
 DB_HOST=127.0.0.1
+PHP_CS_FIXER_IGNORE_ENV=true
