--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
     }
   },
   "require": {
+    "php": ">=7.4",
+    "ext-mbstring": "*",
+    "ext-dom": "*",
     "doctrine/orm": "2.*",
     "illuminate/support": "8.*",
     "illuminate/database": "8.*",
